kyverno/policies/pods/capabilities.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: pod-capabilities
  annotations:
    policies.kyverno.io/title: Pod Capabilities
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Adding capabilities other than `NET_BIND_SERVICE` is disallowed. Rules
      with exeptions for particular workloads must be added here. Default rule
      maps Kubernetes restricted pod security standard
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  variables:
    - name: allContainers
      expression: >-
        object.spec.?containers.orValue([]) + 
        object.spec.?initContainers.orValue([]) + 
        object.spec.?ephemeralContainers.orValue([])

  validations:
    - message: Any capabilities added other than NET_BIND_SERVICE are disallowed.
      expression: >-
        variables.allContainers.all(c, 
          c.?securityContext.?capabilities.?add.orValue([]).all(cap, cap in ['NET_BIND_SERVICE', ''])
        )
