kyverno/policies/pods/hostIPC.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-ipc-pods
  annotations:
    policies.kyverno.io/title: Disallow HostIPC Pods
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy ensures Pods do not use the host's IPC namespace
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - message: >-
        HostIPC pods are disallowed. The field spec.hostIPC must be unset or
        set to `false`.
      expression: >-
        !has(object.spec.hostIPC) || object.spec.hostIPC == false
