kyverno/policies/pods/hostNetwork.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-network-pods
  annotations:
    policies.kyverno.io/title: Disallow HostNetwork Pods
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy ensures Pods do not use the host's network interfaces.
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - message: >-
        HostNetwork pods are disallowed. The field spec.hostNetwork must be
        unset or set to `false`.
      expression: >-
        !has(object.spec.hostNetwork) || object.spec.hostNetwork == false
