kyverno/policies/pods/pod-node-restriction.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-scheduling-to-master-nodes
  annotations:
    policies.kyverno.io/title: Restrict scheduling to master nodes
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Scheduling non-system Pods to control plane nodes (which run kubelet) is often undesirable
      because it takes away resources from the control plane components and can represent
      a possible security threat vector. This policy prevents users from setting a toleration
      in a Pod spec which allows running on control plane nodes
      with the taint key `node-role.kubernetes.io/master` or `node-role.kubernetes.io/control-plane`.
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  matchConditions:
    - name: exclude-system-namespaces
      expression: >-
        !(
          request.namespace == 'kube-system' ||
          request.namespace.startsWith('sys-')
        )
  validations:
    - message: Pods may not use tolerations which schedule on control plane nodes.
      expression: >-
        object.spec.?tolerations.orValue([]).all(t, 
            t.?key.orValue('') != 'node-role.kubernetes.io/master' && 
            t.?key.orValue('') != 'node-role.kubernetes.io/control-plane'
          )
