kyverno/policies/pods/SELinux.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-selinux
  annotations:
    policies.kyverno.io/title: Disallow SELinux
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      SELinux options can be used to escalate privileges and should not be allowed. This policy
      ensures that the `seLinuxOptions` field is undefined.
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  variables:
    - name: allContainers
      expression: >-
        object.spec.?containers.orValue([]) + 
        object.spec.?initContainers.orValue([]) + 
        object.spec.?ephemeralContainers.orValue([])
  validations:
    # Rule 1: selinux-type
    - expression: >-
        object.spec.?securityContext.?seLinuxOptions.?type.orValue('container_t') in ['container_t', 'container_init_t', 'container_kvm_t'] &&
        variables.allContainers.all(c, 
          c.?securityContext.?seLinuxOptions.?type.orValue('container_t') in ['container_t', 'container_init_t', 'container_kvm_t']
        )
      message: >-
        Setting the SELinux type is restricted. The fields
        spec.securityContext.seLinuxOptions.type, spec.containers[*].securityContext.seLinuxOptions.type,
        , spec.initContainers[*].securityContext.seLinuxOptions, and spec.ephemeralContainers[*].securityContext.seLinuxOptions.type
        must either be unset or set to one of the allowed values (container_t, container_init_t, or container_kvm_t).

    # Rule 2: selinux-user-role
    - expression: >-
        object.spec.?securityContext.?seLinuxOptions.?user.orValue('') == '' && 
        object.spec.?securityContext.?seLinuxOptions.?role.orValue('') == '' &&
        variables.allContainers.all(c, 
          c.?securityContext.?seLinuxOptions.?user.orValue('') == '' && 
          c.?securityContext.?seLinuxOptions.?role.orValue('') == ''
        )
      message: >-
        Setting the SELinux user or role is forbidden. The fields
        spec.securityContext.seLinuxOptions.user, spec.securityContext.seLinuxOptions.role,
        spec.containers[*].securityContext.seLinuxOptions.user, spec.containers[*].securityContext.seLinuxOptions.role,
        spec.initContainers[*].securityContext.seLinuxOptions.user, spec.initContainers[*].securityContext.seLinuxOptions.role,
        spec.ephemeralContainers[*].securityContext.seLinuxOptions.user, and spec.ephemeralContainers[*].securityContext.seLinuxOptions.role
        must be unset.
