kyverno/policies/pods/test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-apparmor-profiles
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: pod-capabilities
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-ipc-pods
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-network-pods
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: hostpath-vols
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-pid-pods
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-ports
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-scheduling-to-master-nodes
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privileged-containers
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-proc-mount
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-seccomp
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-selinux
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-sysctls
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - message: Policy is ready for reporting.
        reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - message: Webhook configured.
        reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: enforce-user-namespaces
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - reason: Succeeded
        status: "True"
