kyverno/policies/pods/test/test-apparmor.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-apparmor-not-set
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-apparmor-runtime-default
  annotations:
    container.apparmor.security.beta.kubernetes.io/test: runtime/default
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-apparmor-localhost
  annotations:
    container.apparmor.security.beta.kubernetes.io/test: localhost/k8s-apparmor-example-allow-write
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-apparmor-unconfined
  annotations:
    container.apparmor.security.beta.kubernetes.io/test: unconfined
spec:
  containers:
    - name: test
      image: alpine
