kyverno/policies/pods/test/test-capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-capabilities-none
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-capabilities-allowed
spec:
  containers:
    - name: test
      image: alpine
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: test-capabilities-forbidden
spec:
  containers:
    - name: test
      image: alpine
      securityContext:
        capabilities:
          add:
            - SYS_PTRACE
            - NET_BIND_SERVICE
---
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: shared-sys-ptrace-pod-capabilities
  namespace: kube-system
spec:
  exceptions:
    - policyName: pod-capabilities
      ruleNames: ["*"]
  match:
    any:
      - resources:
          namespaces:
            - default
  conditions:
    all:
      - key: >-
          {{
            [
              request.object.spec.containers[].securityContext.capabilities.add[],
              request.object.spec.template.spec.containers[].securityContext.capabilities.add[]
            ] | [] || `[]`
          }}
        operator: AllIn
        value:
          - "SYS_PTRACE"
          - "NET_BIND_SERVICE"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-capabilities-exception-allowed
  namespace: default
spec:
  containers:
    - name: test
      image: alpine
      securityContext:
        capabilities:
          add:
            - SYS_PTRACE
            - NET_BIND_SERVICE
