kyverno/policies/pods/test/test-host-pid-ports.yaml
# hostPID tests
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpid-false
spec:
  hostPID: false
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpid-true
spec:
  hostPID: true
  containers:
    - name: test
      image: alpine
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: kured-disallow-host-pid-pods
  namespace: kube-system
spec:
  policyRefs:
    - name: disallow-host-pid-pods
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'default'"

    - name: for-given-app
      expression: "object.metadata.name.startsWith('test-hostpid-true-exceptions')"

---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpid-true-exceptions-allow
  namespace: default
spec:
  hostPID: true
  containers:
    - name: test
      image: alpine
---
# hostPorts tests
apiVersion: v1
kind: Pod
metadata:
  name: test-hostport-zero
spec:
  containers:
    - name: test
      image: alpine
      ports:
        - containerPort: 80
          hostPort: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostport-forbidden
spec:
  containers:
    - name: test
      image: alpine
      ports:
        - containerPort: 80
          hostPort: 8080
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: csi-gce-pd-disallow-host-ports
  namespace: kube-system
spec:
  policyRefs:
    - name: disallow-host-ports
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'kube-system'"

    - name: for-given-app
      expression: "object.metadata.name.startsWith('test-hostport-exception')"

    - name: allow-given-host-ports
      expression: >-
        object.spec.?containers.orValue([]).all(c, 
          c.?ports.orValue([]).all(p, !has(p.hostPort) || p.hostPort in [22011, 22012, 22013])
        )
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostport-exception-allow
  namespace: kube-system
spec:
  containers:
    - image: alpine
      name: gce-pd-driver
      ports:
        - containerPort: 22011
          hostPort: 22011
          name: http-endpoint
          protocol: TCP
    - image: alpine
      name: csi-attacher
      ports:
        - containerPort: 22012
          hostPort: 22012
          name: http-endpoint
          protocol: TCP
    - image: alpine
      name: csi-resizer
      ports:
        - containerPort: 22013
          hostPort: 22013
          name: http-endpoint
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-hostport-exception-deployment-allow
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-hostport-exception-deployment-allow
  template:
    metadata:
      labels:
        app: test-hostport-exception-deployment-allow
    spec:
      containers:
        - image: alpine
          name: gce-pd-driver
          ports:
            - containerPort: 22011
              hostPort: 22011
              name: http-endpoint
              protocol: TCP
        - image: alpine
          name: csi-attacher
          ports:
            - containerPort: 22012
              hostPort: 22012
              name: http-endpoint
              protocol: TCP
        - image: alpine
          name: csi-resizer
          ports:
            - containerPort: 22013
              hostPort: 22013
              name: http-endpoint
              protocol: TCP
