kyverno/policies/pods/test/test-hostNetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-host-network-not-set
  labels:
    app: test-host-network-not-set
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-host-network-set-to-false
  labels:
    app: test-host-network-set-to-false
spec:
  hostNetwork: false
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-host-network-set-to-true
  labels:
    app: test-host-network-set-to-true
spec:
  hostNetwork: true
  containers:
    - name: test
      image: alpine
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: etcd-backup-disallow-host-network-pods
  namespace: kube-system
spec:
  policyRefs:
    - name: disallow-host-network-pods
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'default'"

    - name: for-given-app
      expression: "object.metadata.name.startsWith('test-host-network-set-to-true-exception')"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-host-network-set-to-true-exception-allowed
  namespace: default
spec:
  hostNetwork: true
  containers:
    - name: test
      image: alpine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-host-network-set-to-true-exception-deployment-allow
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-host-network-set-to-true-exception-deployment-allow
  template:
    metadata:
      labels:
        app: test-host-network-set-to-true-exception-deployment-allow
    spec:
      hostNetwork: true
      containers:
        - name: test
          image: alpine
