kyverno/policies/pods/test/test-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpath-none
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpath-emptydir
spec:
  containers:
    - name: test
      image: alpine
  volumes:
    - name: cache-volume
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpath-forbidden
spec:
  containers:
    - name: test
      image: alpine
  volumes:
    - name: task-pv-storage
      hostPath:
        path: /data
        type: Directory
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: calico-node-hostpath-vols
  namespace: kube-system
spec:
  policyRefs:
    - name: hostpath-vols
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'kube-system'"

    - name: for-given-app
      expression: "object.metadata.name.startsWith('test-hostpath-exception')"

    - name: allow-given-hostpath
      expression: >-
        object.spec.?volumes.orValue([]).all(v,
          !has(v.hostPath) || !has(v.hostPath.path) || v.hostPath.path in ['/usr/share/ca-certificates', '/lib/modules', '/var/run/calico']
        )
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpath-exception-allowed
  namespace: kube-system
spec:
  containers:
    - name: test
      image: alpine
  volumes:
    - hostPath:
        path: /usr/share/ca-certificates
        type: ""
      name: ssl-certs
    - hostPath:
        path: /lib/modules
        type: ""
      name: lib-modules
    - hostPath:
        path: /var/run/calico
        type: DirectoryOrCreate
      name: var-run-calico
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-hostpath-exception-deployment-allow
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-hostpath-exception-deployment-allow
  template:
    metadata:
      labels:
        app: test-hostpath-exception-deployment-allow
    spec:
      containers:
        - name: test
          image: alpine
      volumes:
        - hostPath:
            path: /usr/share/ca-certificates
            type: ""
          name: ssl-certs
        - hostPath:
            path: /lib/modules
            type: ""
          name: lib-modules
        - hostPath:
            path: /var/run/calico
            type: DirectoryOrCreate
          name: var-run-calico
