kyverno/policies/pods/test/test-privilege-combined.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-privilege-escalation-not-set
spec:
  containers:
    - name: test
      image: test
---
apiVersion: v1
kind: Pod
metadata:
  name: test-privilege-escalation-set-to-false
spec:
  containers:
    - name: test
      image: test
      securityContext:
        allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: test-privilege-escalation-set-to-true
spec:
  containers:
    - name: test
      image: test
      securityContext:
        allowPrivilegeEscalation: true
---
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: trident-disallow-privilege-escalation
  namespace: kube-system
spec:
  exceptions:
    - policyName: disallow-privilege-escalation
      ruleNames: ["*"]
  match:
    any:
      - resources:
          namespaces:
            - default
          names:
            - test-privilege-escalation-set-to-true-exception*
---
apiVersion: v1
kind: Pod
metadata:
  name: test-privilege-escalation-set-to-true-exception-allowed
  namespace: default
spec:
  containers:
    - name: test
      image: test
      securityContext:
        allowPrivilegeEscalation: true
---
# Privileged Container Tests
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged-container-fail
spec:
  containers:
    - name: test
      image: alpine
      securityContext:
        privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged-container-pass
spec:
  containers:
    - name: test
      image: alpine
      securityContext:
        privileged: false
