kyverno/policies/pods/test/test-procmount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-procmount-init-forbidden
spec:
  initContainers:
    - name: init-test
      image: alpine
      securityContext:
        procMount: Unmasked
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-procmount-init-default
spec:
  initContainers:
    - name: init-test
      image: alpine
      securityContext:
        procMount: Default
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-procmount-unset
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-procmount-default
spec:
  containers:
    - name: test
      image: alpine
      securityContext:
        procMount: Default
---
apiVersion: v1
kind: Pod
metadata:
  name: test-procmount-unmasked
spec:
  containers:
    - name: test
      image: alpine
      securityContext:
        procMount: Unmasked
