kyverno/policies/pods/test/test-resource-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-resource-limits-not-set
spec:
  containers:
    - name: test
      image: test
---
apiVersion: v1
kind: Pod
metadata:
  name: test-resource-limits-ok
spec:
  initContainers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6"
          memory: "24Gi"
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6"
          memory: "24Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-resource-limits-init-cpu-too-high
spec:
  initContainers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "7"
          memory: "24Gi"
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6"
          memory: "24Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-resource-limits-cpu-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "7"
          memory: "24Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-resource-limits-init-memory-too-high
spec:
  initContainers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6"
          memory: "25Gi"
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6"
          memory: "24Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-resource-limits-memory-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6"
          memory: "25Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-resource-limits-both-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "7"
          memory: "25Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-cpu-limit-ok
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-cpu-limit-decimal-ok
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6.0"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-cpu-limit-millicores-ok
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "6000m"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-cpu-limit-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "7"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-cpu-limit-decimal-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "7.0"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-cpu-limit-millicores-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          cpu: "7000m"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-memory-limit-ok
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          memory: "24Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-memory-limit-mi-ok
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          memory: "24000Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-memory-limit-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          memory: "25Gi"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-memory-limit-mi-too-high
spec:
  containers:
    - name: test
      image: test
      resources:
        limits:
          memory: "25000Mi"
