kyverno/policies/pods/test/test-scheduling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-scheduling-none
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-scheduling-safe-toleration
spec:
  tolerations:
    - key: "example.com/safe-key"
      operator: "Exists"
      effect: "NoSchedule"
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-scheduling-master-forbidden
spec:
  tolerations:
    - key: "node-role.kubernetes.io/master"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-scheduling-control-plane-forbidden
spec:
  tolerations:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-scheduling-excluded-namespace
  namespace: kube-system
spec:
  tolerations:
    - key: "node-role.kubernetes.io/master"
      operator: "Exists"
  containers:
    - name: test
      image: alpine
