kyverno/policies/pods/test/test-security-settings.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-seccomp-init-forbidden
spec:
  initContainers:
    - name: init-test
      image: alpine
      securityContext:
        seccompProfile:
          type: Unconfined
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-selinux-forbidden
spec:
  securityContext:
    seLinuxOptions:
      user: "admin"
  containers:
    - name: test
      image: alpine
      securityContext:
        seLinuxOptions:
          type: "unconfined_t"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-sysctls-forbidden
spec:
  securityContext:
    sysctls:
      - name: kernel.domainname
        value: "example.com"
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-security-settings-pass
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
    seLinuxOptions:
      type: container_t
    sysctls:
      - name: net.ipv4.ip_local_port_range
        value: "1024 65535"
  containers:
    - name: test
      image: alpine
