kyverno/policies/pods/test/test-user-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: sys-log
    uw.systems/owner: system
  name: sys-log
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-plain-pod-non-sys-ns
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-plain-pod
  namespace: sys-log
spec:
  containers:
    - name: test
      image: alpine
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: test-user-ns-hostnetwork-exception
  namespace: kube-system
spec:
  policyRefs:
    - name: disallow-host-network-pods
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'sys-log'"
    - name: for-given-pod
      expression: "object.metadata.name == 'test-user-ns-hostnetwork-pod'"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-hostnetwork-pod
  namespace: sys-log
spec:
  hostNetwork: true
  containers:
    - name: test
      image: alpine
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: test-user-ns-hostpid-exception
  namespace: kube-system
spec:
  policyRefs:
    - name: disallow-host-pid-pods
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'sys-log'"
    - name: for-given-pod
      expression: "object.metadata.name == 'test-user-ns-hostpid-pod'"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-hostpid-pod
  namespace: sys-log
spec:
  hostPID: true
  containers:
    - name: test
      image: alpine
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: test-user-ns-hostipc-exception
  namespace: kube-system
spec:
  policyRefs:
    - name: disallow-host-ipc-pods
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'sys-log'"
    - name: for-given-pod
      expression: "object.metadata.name == 'test-user-ns-hostipc-pod'"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-hostipc-pod
  namespace: sys-log
spec:
  hostIPC: true
  containers:
    - name: test
      image: alpine
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: test-user-ns-hostpath-pod-exception
  namespace: kube-system
spec:
  policyRefs:
    - name: hostpath-vols
      kind: ValidatingPolicy
  matchConditions:
    - name: for-given-namespace
      expression: "object.metadata.?namespace.orValue('') == 'sys-log'"
    - name: for-given-pod
      expression: "object.metadata.name == 'test-user-ns-hostpath-pod'"
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-hostpath-pod
  namespace: sys-log
spec:
  automountServiceAccountToken: false
  volumes:
    - name: ssl
      hostPath:
        path: /etc/kubernetes/ssl
        type: Directory
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-emptydir-pod
  namespace: sys-log
spec:
  automountServiceAccountToken: false
  volumes:
    - name: data
      emptyDir: {}
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: test-user-ns-nfs-pvc
  namespace: sys-log
spec:
  accessModes:
    - ReadWriteMany
  storageClassName: ""
  resources:
    requests:
      storage: 1Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-nfs-pvc-pod
  namespace: sys-log
spec:
  automountServiceAccountToken: false
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: test-user-ns-nfs-pvc
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: test-user-ns-standard-pvc
  namespace: sys-log
spec:
  accessModes:
    - ReadWriteOnce
  storageClassName: standard
  resources:
    requests:
      storage: 1Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-standard-pvc-pod
  namespace: sys-log
spec:
  automountServiceAccountToken: false
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: test-user-ns-standard-pvc
  containers:
    - name: test
      image: alpine
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: test-user-ns-no-storageclass-pvc
  namespace: sys-log
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: test-user-ns-no-storageclass-pvc-pod
  namespace: sys-log
spec:
  automountServiceAccountToken: false
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: test-user-ns-no-storageclass-pvc
  containers:
    - name: test
      image: alpine
