kyverno/policies/pods/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-containers
policies:
  - ../hostIPC.yaml
  - ../hostNetwork.yaml
  - ../privilege-escalation.yaml
resources:
  - test-hostIPC.yaml
  - test-hostNetwork.yaml
  - test-privilege-escalation.yaml
results:
  # Test hostIPC
  - policy: disallow-host-ipc-pods
    rule: default
    resources: ["test-hostIPC-not-set", "test-hostIPC-set-to-false"]
    kind: Pod
    result: pass
  - policy: disallow-host-ipc-pods
    rule: default
    resources: ["test-hostIPC-set-to-true"]
    kind: Pod
    result: fail

  # Test hostNetwork
  - policy: disallow-host-network-pods
    rule: default
    resources: ["test-hostNetwork-not-set", "test-hostNetwork-set-to-false"]
    kind: Pod
    result: pass
  - policy: disallow-host-network-pods
    rule: default
    resources: ["test-hostNetwork-set-to-true"]
    kind: Pod
    result: fail

  # Test privilege escalation
  - policy: disallow-privilege-escalation
    rule: default
    resources:
      [
        "test-privilege-escalation-not-set",
        "test-privilege-escalation-set-to-false",
      ]
    kind: Pod
    result: pass
  - policy: disallow-privilege-escalation
    rule: default
    resources: ["test-privilege-escalation-set-to-true"]
    kind: Pod
    result: fail
